--- a/web/src/css/app.css
+++ b/web/src/css/app.css
@@ -16,3 +16,15 @@ body  {
     margin-top: 20px;
     color: #2b2f33;
 }
+
+.message .photo {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    float: left;
+}
+
+.author {
+    color: red;
+    font-size: 11px;
+}
